kubernetes/odoo/odoo-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
  labels:
    client: "odoo-app"
