kubernetes/odoo/odoo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: odoo
        image: docker.io/bitnami/odoo:16
        imagePullPolicy: Always
        ports:
        - containerPort: 8069
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: http
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          failureThreshold: 1
          periodSeconds: 10
