kubernetes/odoo/odoo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
spec:
  ports:
  - port: 80
    targetPort: 8069
  type: ClusterIP
  selector:
    app: odoo
