kubernetes/odoo/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: odoo
spec:
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
  selector:
    app: postgresql-service
