kubernetes/odoo/postgress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: postgres
        image: docker.io/bitnami/postgresql:15
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /bitnami/postgresql
      volumes:
      - name: postgres-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: odoo
spec:
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
  selector:
    app: postgresql
