kubernetes/odoo/odoo-deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: odoo
  name: deny-traffic-to-odoo-app-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          client: "odoo-app"
